MMA-8510 Oppgrader til Spring Boot 4.0.6
- Oppdater parent POM fra 3.5.10 til 4.0.6
- Rename starters: web → webmvc, aop → aspectj
- Legg til spring-boot-http-client og spring-boot-restclient
- Migrer spring-retry `@Retryable` til Spring native `@Retryable`
- Erstatt `@EnableRetry` med `@EnableResilientMethods`
- Fjern spring-retry-avhengighet og RetryConstants
- Camel: legg til camel-mdc og camel-spring-boot-dependencies BOM
- Erstatt spring-cloud-contract-wiremock med wiremock-spring-boot 4.2.1
- Oppdater logstash-logback-encoder til 9.0

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>